--- a/style.css
+++ b/style.css
@@ -323,7 +323,11 @@ body {
     flex-direction: column;
   }
   .fea .pic{
-    width: 27rem;
+    width: 21rem;
+  }
+  .fea img{
+    height: 15rem;
+    width: 15rem;
   }
   .fea {
     height:30rem;
